# DomainLogger

./: CMakeLists.txt
demo/include/: demo.h
demo/src/: demo.c
include/domainlogger/: domainlogger.h
src/: logger.client.c  logger.client.h  logger.common.c  logger.common.h  logger.sink.console.c  logger.sink.console.h  logger.sink.console.m  logger.sink.file.c  logger.sink.file.h  logger.sink.file.m  logger.sink.file.mm
tests/include/: queue.h  tests.h
tests/src/: queue_test_1.c  queue_test_2.c  queue_test_3.c  queue_test_4.c  tests.c
